// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardShell > persists, snapshots, and restores collapsed state 1`] = `
<div>
  <div
    class="flex min-h-dvh bg-background"
  >
    <aside
      class="shrink-0 flex-col border-e border-sidebar-border bg-sidebar text-sidebar-foreground sticky top-0 z-40 hidden h-dvh self-start md:flex transition-[width] duration-200 ease-out w-20"
      data-collapsed="true"
      data-testid="dashboard-sidebar"
    >
      <div
        class="flex h-[var(--shell-header-h)] shrink-0 border-b border-border"
        data-testid="sidebar-brand-row"
      >
        <button
          aria-controls="dashboard-navigation"
          aria-expanded="false"
          aria-label="Expand navigation"
          class="group relative flex h-full w-full items-center transition-colors hover:bg-sidebar-accent/60 focus-visible:bg-sidebar-accent/60 focus-visible:outline-2 focus-visible:-outline-offset-4 focus-visible:outline-sidebar-ring justify-center px-3"
          title="Expand navigation"
          type="button"
        >
          <img
            alt="ClinicFlow"
            class="h-9 w-auto shrink-0 object-contain"
            height="34"
            src="/brand/clinicflow-mark.png"
            width="38"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right absolute inset-e-1.5 top-1/2 size-4 -translate-y-1/2 opacity-0 transition-opacity group-hover:opacity-100 group-focus-visible:opacity-100 rtl:rotate-180"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </button>
      </div>
      <nav
        aria-label="ClinicFlow navigation"
        class="flex-1 space-y-1 overflow-y-auto py-5 px-3"
        id="dashboard-navigation"
      >
        <a
          aria-current="page"
          class="flex min-h-11 items-center rounded-xl text-sm font-medium transition-colors focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-sidebar-ring justify-center px-3 bg-sidebar-primary text-sidebar-primary-foreground shadow-sm"
          href="/dashboard"
          title="Dashboard"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-layout-dashboard size-5 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="9"
              rx="1"
              width="7"
              x="3"
              y="3"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="14"
              y="3"
            />
            <rect
              height="9"
              rx="1"
              width="7"
              x="14"
              y="12"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="3"
              y="16"
            />
          </svg>
        </a>
        <a
          class="flex min-h-11 items-center rounded-xl text-sm font-medium transition-colors focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-sidebar-ring justify-center px-3 text-sidebar-foreground/75 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground"
          href="/patients"
          title="Patients"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-users size-5 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <path
              d="M16 3.128a4 4 0 0 1 0 7.744"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
          </svg>
        </a>
      </nav>
    </aside>
    <div
      class="flex min-w-0 flex-1 flex-col"
    >
      <header
        class="sticky top-0 z-30 flex h-[var(--shell-header-h)] shrink-0 items-center gap-3 border-b bg-card/95 px-4 backdrop-blur md:px-6"
        data-testid="dashboard-header"
      >
        <button
          aria-label="Open navigation"
          class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-8 md:hidden"
          data-size="icon"
          data-slot="button"
          data-variant="ghost"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-menu size-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 5h16"
            />
            <path
              d="M4 12h16"
            />
            <path
              d="M4 19h16"
            />
          </svg>
        </button>
        <span
          class="flex items-center gap-2 md:hidden"
        >
          <img
            alt="ClinicFlow"
            class="h-6 w-auto"
            height="24"
            src="/brand/clinicflow-mark.png"
            width="28"
          />
          <span
            class="text-sm font-semibold"
          >
            ClinicFlow
          </span>
        </span>
        <div
          class="flex-1"
        />
        <button
          aria-label="Switch to dark mode"
          class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-8 h-7 w-7"
          data-size="icon"
          data-slot="button"
          data-variant="ghost"
          title="Dark mode"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-moon h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
            />
          </svg>
        </button>
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          aria-label="Open user menu"
          class="group/button inline-flex shrink-0 items-center justify-center border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 h-11 gap-2 rounded-xl px-2"
          data-size="default"
          data-slot="dropdown-menu-trigger"
          data-state="closed"
          data-variant="ghost"
          id="radix-_r_5_"
          type="button"
        >
          <span
            class="group/avatar relative flex shrink-0 rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:border-border after:mix-blend-darken data-[size=lg]:size-10 data-[size=sm]:size-6 dark:after:mix-blend-lighten size-8"
            data-size="default"
            data-slot="avatar"
          >
            <span
              class="flex size-full items-center justify-center rounded-full group-data-[size=sm]/avatar:text-xs bg-primary/10 text-xs font-semibold text-primary"
              data-slot="avatar-fallback"
            >
              AA
            </span>
          </span>
          <span
            class="hidden max-w-40 text-start sm:block"
          >
            <span
              class="block truncate text-sm font-medium"
            >
              Ada Admin
            </span>
            <span
              class="block truncate text-xs capitalize text-muted-foreground"
            >
              admin
            </span>
          </span>
        </button>
      </header>
      <main
        class="flex-1 overflow-x-hidden px-5 py-6 lg:px-10 lg:py-8"
      >
        Content
      </main>
    </div>
  </div>
</div>
`;

exports[`DashboardShell > renders the header utilities and expanded navigation 1`] = `
<div>
  <div
    class="flex min-h-dvh bg-background"
  >
    <aside
      class="shrink-0 flex-col border-e border-sidebar-border bg-sidebar text-sidebar-foreground sticky top-0 z-40 hidden h-dvh self-start md:flex transition-[width] duration-200 ease-out w-72"
      data-collapsed="false"
      data-testid="dashboard-sidebar"
    >
      <div
        class="flex h-[var(--shell-header-h)] shrink-0 border-b border-border"
        data-testid="sidebar-brand-row"
      >
        <button
          aria-controls="dashboard-navigation"
          aria-expanded="true"
          aria-label="Collapse navigation"
          class="group relative flex h-full w-full items-center transition-colors hover:bg-sidebar-accent/60 focus-visible:bg-sidebar-accent/60 focus-visible:outline-2 focus-visible:-outline-offset-4 focus-visible:outline-sidebar-ring gap-3 px-5"
          title="Collapse navigation"
          type="button"
        >
          <img
            alt="ClinicFlow"
            class="h-9 w-auto shrink-0 object-contain"
            height="34"
            src="/brand/clinicflow-mark.png"
            width="38"
          />
          <span
            class="truncate text-lg font-semibold tracking-tight"
          >
            ClinicFlow
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-left ms-auto size-4 shrink-0 opacity-0 transition-opacity group-hover:opacity-100 group-focus-visible:opacity-100 rtl:rotate-180"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
        </button>
      </div>
      <nav
        aria-label="ClinicFlow navigation"
        class="flex-1 space-y-1 overflow-y-auto py-5 px-4"
        id="dashboard-navigation"
      >
        <a
          aria-current="page"
          class="flex min-h-11 items-center rounded-xl text-sm font-medium transition-colors focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-sidebar-ring gap-3 px-3.5 bg-sidebar-primary text-sidebar-primary-foreground shadow-sm"
          href="/dashboard"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-layout-dashboard size-5 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="9"
              rx="1"
              width="7"
              x="3"
              y="3"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="14"
              y="3"
            />
            <rect
              height="9"
              rx="1"
              width="7"
              x="14"
              y="12"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="3"
              y="16"
            />
          </svg>
          <span>
            Dashboard
          </span>
        </a>
        <a
          class="flex min-h-11 items-center rounded-xl text-sm font-medium transition-colors focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-sidebar-ring gap-3 px-3.5 text-sidebar-foreground/75 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground"
          href="/patients"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-users size-5 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <path
              d="M16 3.128a4 4 0 0 1 0 7.744"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
          </svg>
          <span>
            Patients
          </span>
        </a>
      </nav>
    </aside>
    <div
      class="flex min-w-0 flex-1 flex-col"
    >
      <header
        class="sticky top-0 z-30 flex h-[var(--shell-header-h)] shrink-0 items-center gap-3 border-b bg-card/95 px-4 backdrop-blur md:px-6"
        data-testid="dashboard-header"
      >
        <button
          aria-label="Open navigation"
          class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-8 md:hidden"
          data-size="icon"
          data-slot="button"
          data-variant="ghost"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-menu size-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 5h16"
            />
            <path
              d="M4 12h16"
            />
            <path
              d="M4 19h16"
            />
          </svg>
        </button>
        <span
          class="flex items-center gap-2 md:hidden"
        >
          <img
            alt="ClinicFlow"
            class="h-6 w-auto"
            height="24"
            src="/brand/clinicflow-mark.png"
            width="28"
          />
          <span
            class="text-sm font-semibold"
          >
            ClinicFlow
          </span>
        </span>
        <div
          class="flex-1"
        />
        <button
          aria-label="Switch to dark mode"
          class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-8 h-7 w-7"
          data-size="icon"
          data-slot="button"
          data-variant="ghost"
          title="Dark mode"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-moon h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
            />
          </svg>
        </button>
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          aria-label="Open user menu"
          class="group/button inline-flex shrink-0 items-center justify-center border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 h-11 gap-2 rounded-xl px-2"
          data-size="default"
          data-slot="dropdown-menu-trigger"
          data-state="closed"
          data-variant="ghost"
          id="radix-_r_0_"
          type="button"
        >
          <span
            class="group/avatar relative flex shrink-0 rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:border-border after:mix-blend-darken data-[size=lg]:size-10 data-[size=sm]:size-6 dark:after:mix-blend-lighten size-8"
            data-size="default"
            data-slot="avatar"
          >
            <span
              class="flex size-full items-center justify-center rounded-full group-data-[size=sm]/avatar:text-xs bg-primary/10 text-xs font-semibold text-primary"
              data-slot="avatar-fallback"
            >
              AA
            </span>
          </span>
          <span
            class="hidden max-w-40 text-start sm:block"
          >
            <span
              class="block truncate text-sm font-medium"
            >
              Ada Admin
            </span>
            <span
              class="block truncate text-xs capitalize text-muted-foreground"
            >
              admin
            </span>
          </span>
        </button>
      </header>
      <main
        class="flex-1 overflow-x-hidden px-5 py-6 lg:px-10 lg:py-8"
      >
        <h1>
          Content
        </h1>
      </main>
    </div>
  </div>
</div>
`;
